<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.0.23">
  <DUT Name="E_Typ_VLV" Id="{09bff28b-050d-4cdd-84b9-9dd0b54825fc}">
    <Declaration><![CDATA[TYPE E_Typ_VLV :
(
	///bistabile and two feedback sensors
	Valve2_Sensor2 := 0,
	///bistabile and open feedback sensor	
	Valve2_SensorOpened,
	///bistabile and close feedback sensor
	Valve2_SensorClosed,
	///bistabile and no feedback sensors
	Valve2_Sensor0,
	///monostabile and 2 feedback sensors	
	Valve1_Sensor2,
	///monostabile and open feedback sensor	
	Valve1_SensorOpened,
	///monostabile and close feedback sensor
	Valve1_SensorClosed,
	///monostabile and no feedback sensors
	Valve1_Sensor0,
	Max_E_Typ_VLV
);
END_TYPE
]]></Declaration>
    <ObjectProperties />
  </DUT>
</TcPlcObject>